--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,10 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
+allprojects {
+    group = 'com.lyokato.webauthnkit-android'
+    version = '1.0'
+}
+
 buildscript {
     ext.kotlin_version = '1.3.20'
     ext.anko_version = '0.10.8'
